tests/solidity-semantic-tests/out/errors/require_error_evaluation_order_1/C.approval.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_evaluation_order_1.sol.C.approval_program() -> uint64:
main:
    intcblock 1 0
    pushint 4096
    bzero
    dup
    store 5
    store 0
    load 0
    pushbytes 0x0000000000000000000000000000000000000000000000000000000000000080
    replace2 64
    store 0
    txn ApplicationID
    bnz main_after_if_else@2
    intc_0 // 1
    return

main_after_if_else@2:
    txn OnCompletion
    !
    assert
    txn ApplicationID
    assert
    pushbytess 0xcd78b354 0x4b2c0376 // method "f()uint256", method "g()uint256"
    txna ApplicationArgs 0
    match f g
    err


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_evaluation_order_1.sol.C.f[routing]() -> void:
f:
    txn GroupIndex
    bz f_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

f_ternary_merge@4:
    !
    assert // not payable
    err // E

f_ternary_false@3:
    intc_1 // 0
    b f_ternary_merge@4


// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_evaluation_order_1.sol.C.g[routing]() -> void:
g:
    txn GroupIndex
    bz g_ternary_false@3
    txn GroupIndex
    intc_0 // 1
    -
    gtxns Amount

g_ternary_merge@4:
    !
    assert // not payable
    pushbytes 0x151f7c75000000000000000000000000000000000000000000000000000000000000002a
    log
    intc_0 // 1
    return

g_ternary_false@3:
    intc_1 // 0
    b g_ternary_merge@4
